fix: overflow at bottom of landscape layout

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -11,6 +11,7 @@
     --landscape-grid-rows: repeat(3, max-content);
     min-width: 320px;
     max-height: 100vh;
+    max-height: 100dvh;
     font-family: Rubik, sans-serif;
   }
 
